<resources>
    <string name="app_name">Cosmos Rocks</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="empty_link">Nothing to show: link is empty!</string>
    <string name="loading">Loading picture data…</string>
    <string name="search_wiki">Поиск в Википедии</string>
    <string name="wiki_helper_text">Длина запроса - не более 20 символов!</string>
    <string name="favourite">Favorites</string>
    <string name="settings">Settings</string>
    <string name="to_screen_one">Go to screen one</string>
    <string name="to_screen_two">Go to screen two</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_before_yesterday">DB yesterday</string>
    <string name="date_to_choose">Choose date of the picture</string>
    <string name="menu_is_on">Menu is already on!</string>
    <string name="date">Date</string>
    <string name="theme_to_choose">Choose application theme</string>
    <string name="main_theme">Main</string>
    <string name="alternative_theme">Alternative</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="picture_of_mars">Picture of Mars</string>
    <string name="picture_by_curiosity">Picture by Curiosity</string>
    <string name="click_image">Click image to get description</string>
    <string name="click_video">Click here to watch video</string>
    <string name="info">Info</string>
    <string name="show_description">Show full description</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="mars_by_curiosity">Mars by Curiosity</string>
    <string name="weather">Weather</string>
    <string name="satellite">Satellite View</string>
    <string name="moscow_view">Last picture of Moscow made by satellite</string>
    <string name="moscow">Moscow</string>
    <string name="omsk">Omsk</string>
    <string name="custom">Custom</string>
    <string name="current_pic">Latest photo by satellite</string>
    <string name="choose_city">Choose city to see the picture</string>
    <string name="under_construction">This function is still under construction. Try again later!</string>
    <string name="lorem">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="collapsing_fragment">Go to Collapsing Toolbar Layout</string>
    <string name="motion_fragment">Go to Motion Layout</string>
    <string name="push_me">PUSH ME!</string>
    <string name="notes">Notes</string>
    <string name="note">Note</string>
    <string name="add_note_title_helper">Add title of your note here</string>
    <string name="add_note">Add note</string>
    <string name="choose_icon">Choose icon by importance</string>
    <string name="note_title_warning">Note title can\'t be empty!</string>
    <string name="splash_text">To Infinity and Beyond!</string>
</resources>